[package]
name = "dual-server"
version = "0.1.0"
authors = ["Paul Bricman <paulbricman@protonmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0.118"
rust-bert = { git = "https://github.com/guillaume-be/rust-bert" }
tch = "0.5.0"
sbert = { git = "https://github.com/paulbricman/rust-sbert/" }
anyhow = "1.0.40"
once_cell = "1.7"
tokio = { version = "1.6.1", features = ["full"] } 
futures = "0.3.15"
warp = "0.3.1"
rust_tokenizers = "~6.2.3"
regex = "1"
itertools = "0.10.1"
pickledb = "0.4.1"
reqwest = "0.11.4"
ngt = "0.4.0"
space = "0.13.1"
quackin = "0.1.1"
sprs = "0.4.0"

[[bin]]
name = "dual-server-linux"
path = "src/main.rs"

[[bin]]
name = "dual-server-windows"
path = "src/main.rs"

[[bin]]
name = "dual-server-macos"
path = "src/main.rs"